force-app/main/default/objects/Response_Line_Item__c/Response_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Response Line Item</label>
    <nameField>
        <displayFormat>a-{0000}</displayFormat>
        <label>Response Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Response Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>