force-app/main/default/objects/Response_Line_Item__c/fields/Response__c.field-meta.xml
<CustomField>
    <fullName>Response__c</fullName>
    <label>Response</label>
    <referenceTo>Response__c</referenceTo>
    <relationshipLabel>Response Line Items</relationshipLabel>
    <relationshipName>Response_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>