force-app/main/default/objects/Response_Line_Item__c/fields/Template_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Template_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Template Line Item</label>
    <referenceTo>Template_Line_Item__c</referenceTo>
    <relationshipLabel>Response Line Items</relationshipLabel>
    <relationshipName>Response_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>