force-app/main/default/objects/Response_Line_Item__c/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <label>Value</label>
    <length>254</length>
    <type>Text</type>
</CustomField>